# Tadis

./: .gitignore  LICENSE  README.md  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/madis_database/: Cargo.toml
src-tauri/madis_database/src/: models.rs  plugin.rs  queries.rs
src-tauri/migrations/: 202412182125_init.sql
src-tauri/src/: lib.rs  models.rs
src-tauri/src/commands/: connection.rs  mod.rs  redis.rs
src-tauri/src/models/: connection_config.rs  redis.rs
src-tauri/tadis_database/: Cargo.toml
src-tauri/tadis_database/src/: lib.rs  plugin.rs
src/app/: globals.css  layout.tsx  metadata.ts  page.tsx
src/app/components/: app-sidebar.tsx  close-button.tsx  connected-clients-table.tsx  connection-card.tsx  custom-alert-dialog.tsx  data-table.tsx  max-button.tsx  min-button.tsx  nav-links.tsx  redis-line-chart.tsx  redis-list-item.tsx  redis-string-item.tsx  redisitem.tsx  redist-list-item.tsx  sidebar-collapse-button.tsx  sidenav.tsx  tool-tip.tsx  treeview.tsx  ttl-dialog.tsx  window-titlebar.tsx
src/app/connection/: page.tsx
src/app/database/: page.tsx
src/app/providers/: theme-provider.tsx
src/app/setting/: page.tsx
src/components/ui/: custom-dialog.tsx  loading-dialog.tsx  sonner.tsx  switch.tsx
src/lib/: utils.ts
src/mock/: redis-data.ts
src/models/: connection.ts  redisClientInfo.ts  redisServerStatistics.ts  redisTreeItem.ts
src/services/: connection-commands.ts  redis-commands.tsx
src/types/: redis.ts  redisItem.ts
(+23 files in other folders)
