[workspace]
members = ["madis_database"]

[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.1.1", features = ["macos-private-api"] }
tauri-plugin-log = "2.0.0"
tauri-plugin-store = "2"
tauri-plugin-clipboard-manager = "2.0.2"
redis = "0.27.5"
window-vibrancy = "0.5.2"
madis_database = { workspace = true }


[workspace.dependencies]
madis_database = { path = "madis_database" }
tauri = "2.1.1"
log = "0.4"
