[package]
name = "tadis_database"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri-plugin-clipboard-manager = "2.0.2"
sqlx = { version = "0.8.0", features = ["sqlite", "runtime-tokio-rustls"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { workspace = true }
log = { workspace = true }
